kubernetes/apps/observability/thanos/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-query-tailscale
  annotations:
    tailscale.com/proxy-group: inbound
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
    tailscale.com/tags: "tag:observability"
spec:
  ingressClassName: internal
  rules:
    - host: "thanos.${TAILSCALE_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thanos-query-frontend
                port:
                  name: http
